Fix text truncating

--- a/src/app/container/content/youtube/search-card/search-card.component.sass
+++ b/src/app/container/content/youtube/search-card/search-card.component.sass
@@ -112,3 +112,9 @@
 .play-icon-active
   opacity: 0.6
   visibility: hidden
+
+.truncate
+  min-height: 2.4em
+  max-height: 2.4em
+  overflow: hidden
+  text-overflow: ellipsis
