--- a/src/app/global/components/audio-player/audio-player.component.sass
+++ b/src/app/global/components/audio-player/audio-player.component.sass
@@ -40,3 +40,9 @@
   .playback-seek-bar-handle
     background-color: $playbackSeekHandle
     height: 10px
+
+.truncate
+  width: 100%
+  white-space: nowrap
+  overflow: hidden
+  text-overflow: ellipsis
